syntax = "proto3";
package racing;

option go_package = "/racing";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

service Racing {
  // ListRaces returns a list of all races.
  rpc ListRaces(ListRacesRequest) returns (ListRacesResponse) {
    option (google.api.http) = { post: "/v1/list-races", body: "*" };
  }
  // FindByDate method get all crosswords for a given date.
  rpc RaceById(RaceByIdRequest) returns (RaceByIdResponse){
    option (google.api.http) = { get: "/v1/race-by-id/{id}" };
    }
}

/* Requests/Responses */

// Request for ListRaces call.
message ListRacesRequest {
  ListRacesRequestFilter filter = 1;
}

// Response to ListRaces call.
message ListRacesResponse {
  repeated Race races = 1;
}

// Filter for listing races.
message ListRacesRequestFilter {
  repeated int64 meeting_ids = 1;
  bool visible = 2;
}

/* Resources */

// A race resource.
message Race {
  // ID represents a unique identifier for the race.
  int64 id = 1;
  // MeetingID represents a unique identifier for the races meeting.
  int64 meeting_id = 2;
  // Name is the official name given to the race.
  string name = 3;
  // Number represents the number of the race.
  int64 number = 4;
  // AdvertisedStartTime is the time the race is advertised to run.
  google.protobuf.Timestamp advertised_start_time = 6;
  // status
  string status = 7;
}


// Request for Race bt ID.
message RaceByIdRequest {
   int64 id = 1;
}

// Response message based on passed ID's.
message RaceByIdResponse {
    Race races = 1;
}